Update image query schemas
