# python-sdk/src/intellioptics/generated/openapi/models/__init__.py
@@ -1,7 +1,5 @@
-""" Contains all the data models used in inputs/outputs """
+"""Contains all the data models used in inputs/outputs"""
 
-from .answer_out import AnswerOut
-from .answer_out_answer import AnswerOutAnswer
 from .body_image_query_v1_image_queries_post import BodyImageQueryV1ImageQueriesPost
 from .detector_create import DetectorCreate
 from .detector_create_mode import DetectorCreateMode
@@ -12,11 +10,13 @@ from .feedback_in_bboxes_type_0_item import FeedbackInBboxesType0Item
 from .feedback_in_correct_label import FeedbackInCorrectLabel
 from .http_validation_error import HTTPValidationError
 from .image_query_json import ImageQueryJson
+from .image_query_json_metadata_type_0 import ImageQueryJsonMetadataType0
+from .image_query_out import ImageQueryOut
+from .image_query_out_extra_type_0 import ImageQueryOutExtraType0
+from .image_query_out_result_type_0 import ImageQueryOutResultType0
 from .validation_error import ValidationError
 
 __all__ = (
-    "AnswerOut",
-    "AnswerOutAnswer",
     "BodyImageQueryV1ImageQueriesPost",
     "DetectorCreate",
     "DetectorCreateMode",
@@ -27,5 +27,9 @@ __all__ = (
     "FeedbackInCorrectLabel",
     "HTTPValidationError",
     "ImageQueryJson",
+    "ImageQueryJsonMetadataType0",
+    "ImageQueryOut",
+    "ImageQueryOutExtraType0",
+    "ImageQueryOutResultType0",
     "ValidationError",
 )
